--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,25 +1,33 @@
 {
-	"version": "2.0.0",
 	"tasks": [
-		{
-			"type": "cppbuild",
-			"label": "C/C++: gcc build active file",
-			"command": "/usr/bin/gcc",
-			"args": [
-				"-fdiagnostics-color=always",
-				"-g",
-				"${file}",
-				"-o",
-				"${fileDirname}/${fileBasenameNoExtension}"
-			],
-			"options": {
-				"cwd": "${fileDirname}"
-			},
-			"problemMatcher": [
-				"$gcc"
-			],
-			"group": "build",
-			"detail": "compiler: /usr/bin/gcc"
+	  {
+		"type": "shell",
+		"label": "g++.exe build active file";,
+		"command": "C:\\MinGW64\\bin\\g++.exe";,
+		"args": [
+		  "-g",
+		  "${file}",
+		  "-o",
+		  "${fileDirname}\\${fileBasenameNoExtension}.exe"
+		];,
+		"options": {
+		  "cwd": "C:\\MinGW64\\bin"
 		}
-	]
-}
+	  },
+	  {
+		"type": "shell",
+		"label": "g++ build & run active file",
+		"command": "C:\\MinGW64\\bin\\g++.exe",
+		"args": [
+		  "${file}",
+		  "-o",
+		  "${fileDirname}\\${fileBasenameNoExtension}.exe"
+		],
+		"options": {
+		  "cwd": "C:\\MinGW64\\bin"
+		}
+	  }
+	],
+	"version":
+  }
+  
